--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -32,25 +32,25 @@ jobs:
         uses: azure/setup-helm@v2.1
       - name: "setup kubectl" 
         uses: azure/setup-kubectl@v2.0
-      #- name: "declare github variables" 
-      #  id: vars
-      #  shell: bash
-      #  run: |
-      #    echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-      #    if [[ $GITHUB_REF == refs/tags/* ]]; then
-      #       echo "##[set-output name=tags;]$(echo ${GITHUB_REF#refs/tags/})"  
-      #       echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF#refs/tags/})-$(git rev-parse --short HEAD)"  
-      #    else
-      #       echo "##[set-output name=tags;]$(echo '')"
-      #       echo "##[set-output name=imagetag;]$(echo '')"
-      #    fi
-      #    if [[ $GITHUB_REF == refs/heads/* ]]; then
-      #       echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"  
-      #       echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF#refs/heads/})-$(git rev-parse --short HEAD)"  
-      #    else
-      #       echo "##[set-output name=branch;]$(echo '')"
-      #       echo "##[set-output name=imagetag;]$(echo '')"
-      #    fi
+      - name: "declare github variables" 
+        id: vars
+        shell: bash
+        run: |
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+             echo "##[set-output name=tags;]$(echo ${GITHUB_REF#refs/tags/})"  
+             echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF#refs/tags/})-$(git rev-parse --short HEAD)"  
+          else
+             echo "##[set-output name=tags;]$(echo '')"
+             echo "##[set-output name=imagetag;]$(echo '')"
+          fi
+          if [[ $GITHUB_REF == refs/heads/* ]]; then
+             echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"  
+             echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF#refs/heads/})-$(git rev-parse --short HEAD)"  
+          else
+             echo "##[set-output name=branch;]$(echo '')"
+             echo "##[set-output name=imagetag;]$(echo '')"
+          fi
       #- name: "Pisa-Controller kaniko build"
       #  uses: mlycore/action-kaniko@master
       #  with:
@@ -82,7 +82,8 @@ jobs:
           cd charts/pisa-controller 
           helm dependency build
           cd ..
-          helm install --debug pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} --set image.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/controller  --set image.tag=${{ steps.vars.outputs.imagetag }} --set proxyImage.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/proxy  --set proxyImage.tag=${{ steps.vars.outputs.imagetag }} --set image.imagePullSecrets[0].name=uhub
+          #helm install --debug pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} --set image.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/controller  --set image.tag=${{ steps.vars.outputs.imagetag }} --set proxyImage.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/proxy  --set proxyImage.tag=${{ steps.vars.outputs.imagetag }} --set image.imagePullSecrets[0].name=uhub
+          helm install --debug pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} --set image.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/controller  --set image.tag=fix-integration-test-29ebd0e --set proxyImage.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/proxy  --set proxyImage.tag=fix-integration-test-29ebd0e --set image.imagePullSecrets[0].name=uhub
           kubectl get pods -n ${PISANIX_NAMESPACE}
           kubectl describe pods -n ${PISANIX_NAMESPACE}
           kubectl wait --timeout=60s --for=condition=Ready --all pod -n ${PISANIX_NAMESPACE}
