--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -106,7 +106,7 @@ jobs:
           kubectl wait --timeout=60s --for=condition=ready --all pod
           kubectl port-forward svc/test 3308:3306 &
           kubectl get pod --show-labels
-          kubectl logs -l app=nginx -n ${PISANIX_NAMESPACE} --all-containers=true
+          kubectl logs -l app=nginx --all-containers=true
           sleep 3
       - name: "prepare mysql" 
         uses: shogo82148/actions-setup-mysql@v1
