--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -105,7 +105,7 @@ jobs:
           kubectl get pod --show-labels
           kubectl wait --timeout=60s --for=condition=ready --all pod
           kubectl port-forward svc/test 3308:3306 &
-          kubectl get pod --show-labels
+          kubectl get pod -A --show-labels
           kubectl logs -l app=nginx --all-containers=true
           sleep 3
       - name: "prepare mysql" 
