--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -98,7 +98,7 @@ jobs:
           kubectl apply -f app.yml 
           sleep 15
           kubectl patch deployment test  -p='{"spec": {"replicas": 0, "template": {"spec": {"imagePullSecrets": [{"name": "uhub"}]}}}}'
-          kubectl get pod --show-labels
+          kubectl get pod -A --show-labels
           sleep 15 
           kubectl get pod --show-labels
           kubectl scale deployment test --replicas=1 
