--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -104,7 +104,12 @@ jobs:
           kubectl scale deployment test --replicas=1 
           sleep 15 
           kubectl get pod -A --show-labels
-          kubectl wait --timeout=60s --for=condition=ready --all pod
+          #kubectl wait --timeout=60s --for=condition=ready --all pod
+          for _ in `seq 1 100`;do
+            kubectl describe pods -n ${PISANIX_NAMESPACE}
+            kubectl -l app=pisa-controller logs -n ${PISANIX_NAMESPACE}
+            sleep 3
+          done
           kubectl port-forward svc/test 3308:3306 &
           kubectl get pod -A --show-labels
           kubectl logs -l app=nginx --all-containers=true
