--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -107,7 +107,7 @@ jobs:
           #kubectl wait --timeout=60s --for=condition=ready --all pod
           for _ in `seq 1 100`;do
             kubectl describe pods -n ${PISANIX_NAMESPACE}
-            kubectl -l app=pisa-controller logs -n ${PISANIX_NAMESPACE}
+            kubectl logs -l app=nginx --all-containers=true
             sleep 3
           done
           kubectl port-forward svc/test 3308:3306 &
