--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -106,8 +106,7 @@ jobs:
           kubectl get pod -A --show-labels
           #kubectl wait --timeout=60s --for=condition=ready --all pod
           for _ in `seq 1 100`;do
-            kubectl describe pods -n ${PISANIX_NAMESPACE}
-            kubectl logs -l app=nginx --all-containers=true
+            kubectl describe pods
             sleep 3
           done
           kubectl port-forward svc/test 3308:3306 &
