--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -104,7 +104,8 @@ jobs:
           kubectl scale deployment test --replicas=1 
           kubectl get pod -A --show-labels
           kubectl wait --timeout=60s --for=condition=ready --all pod
-          kubectl port-forward svc/test 3308:3307 &
+          kubectl -l app=nginx logs  --all-containers=true
+          kubectl port-forward svc/test 3308:3306 &
           kubectl get pod -A --show-labels
           sleep 3
       - name: "prepare mysql" 
