--- a/pisa-proxy/proxy/pool/Cargo.toml
+++ b/pisa-proxy/proxy/pool/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1"
 crossbeam-queue = "0.3.5"
+dashmap = "5.3.4"
 tokio-stream = { version = "0.1" }
 futures = "0.3.21"
 tracing = "0.1.13"
