chore(license): add  Cargo.lock for pisa-daemon in .licenserc.yaml to ignore license check
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -33,6 +33,8 @@ header:
     - 'pisa-controller/go.sum'
     - 'pisa-proxy/rust-toolchain'
     - 'pisa-proxy/Cargo.lock'
+    - 'pisa-daemon/rust-toolchain'
+    - 'pisa-daemon/Cargo.lock'
     - '**/*.template'
 
   comment: on-failure
