--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 serde = { version = "1.0.133", default-features = false, features = ["derive"] }
 serde_derive = "1.0"
 regex = "1"
+crossbeam-channel = "0.3"
+futures = "0.3.5"
+async-trait = "0.1.56"
+tokio = { version = "1.0.0", features = ["full", "tracing"] }
+tokio-scoped = "0.2.0"
 loadbalance = { path = "../loadbalance" }
 endpoint = { path = "../endpoint" }
