--- a/pisa-proxy/app/config/Cargo.toml
+++ b/pisa-proxy/app/config/Cargo.toml
@@ -17,7 +17,7 @@ api = {path = "../api"}
 plugin = {path = "../../plugin"}
 runtime_mysql = {path = "../../runtime/mysql"}
 proxy = {path = "../../proxy"}
-clap = "3.1.9"
+clap = {version = "3.2.12", features=["env"]}
 tracing = "0.1.13"
 tracing-subscriber = "0.2.2"
 reqwest = {version = "0.11.10", features = ["blocking", "json"]}
