--- a/pisa-daemon/app/traffic_qos/Cargo.toml
+++ b/pisa-daemon/app/traffic_qos/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
 config = { path = "../config" }
 tc_command = { path = "../../tc" }
+bpf = { path = "../../bpf" }
