--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -41,20 +41,21 @@ default_target = "readwrite"
 
 [proxy.config.read_write_splitting.dynamic.discovery]
 type = "mha"
-user = "monitor"
-password = "monitor"
-monitor_interval = 10
-connect_interval = 200
+user = "root"
+password = "12345678"
+pool_size = 16
+monitor_interval = 10000
+connect_interval = 10000
 connect_timeout = 200
 connect_max_failures = 3
-ping_interval = 100
+ping_interval = 1000
 ping_timeout = 100
 ping_max_failures = 3
-replication_lag_interval = 3
+replication_lag_interval = 1000
 replication_lag_timeout = 3
 replication_lag_max_failures = 3
 max_replication_lag = 3
-read_only_interval = 300
+read_only_interval = 1000
 read_only_timeout = 3
 read_only_max_failures = 3
 
@@ -124,7 +125,7 @@ host = "127.0.0.1"
 port = 3306
 # 负载均衡节点权重
 weight = 1
-role = "readwrite"
+role = "read"
 
 [[mysql.node]]
 # 数据源 name
@@ -134,11 +135,11 @@ db = "socksdb"
 # 数据库 user
 user = "root"
 # 数据库 password
-password = "roott"
+password = "12345678"
 # 数据库地址
 host = "127.0.0.1"
 # 数据库端口
 port = 3308
 # 负载均衡节点权重
 weight = 1
-role = "read"
+role = "readwrite"
