--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -10,7 +10,10 @@ regex = "1"
 crossbeam-channel = "0.3"
 futures = "0.3.5"
 async-trait = "0.1.56"
+chrono = "0.4"
 tokio = { version = "1.0.0", features = ["full", "tracing"] }
 tokio-scoped = "0.2.0"
 loadbalance = { path = "../loadbalance" }
 endpoint = { path = "../endpoint" }
+conn_pool = { path = "../../proxy/pool" }
+mysql_protocol = {path = "../../protocol/mysql", package = "mysql_protocol"}
