--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+parking_lot = "0.12.0"
+tracing = "0.1.13"
+tracing-futures = { version = "0.2.3" }
+tracing-subscriber = "0.2.2"
 serde = { version = "1.0.133", default-features = false, features = ["derive"] }
 serde_derive = "1.0"
 regex = "1"
