refactor(strategy): refactor config
Signed-off-by: wangbo <wangbo@sphere-ex.com>

--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -43,20 +43,20 @@ default_target = "readwrite"
 type = "mha"
 user = "root"
 password = "12345678"
-monitor_interval = 1000
-connect_interval = 1000
+monitor_period = 1000
+connect_period = 1000
 connect_timeout = 60000
-connect_max_failures = 3
-ping_interval = 1000
+connect_failure_threshold = 3
+ping_period = 1000
 ping_timeout = 60000
-ping_max_failures = 3
-replication_lag_interval = 1000
+ping_failure_threshold = 3
+replication_lag_period = 1000
 replication_lag_timeout = 60000
-replication_lag_max_failures = 3
+replication_lag_failure_threshold = 3
 max_replication_lag = 3
-read_only_interval = 1000
+read_only_period = 1000
 read_only_timeout = 60000
-read_only_max_failures = 3
+read_only_failure_threshold = 3
 
 [[proxy.config.read_write_splitting.dynamic.rule]]
 name = "write-rule"
