fix(example): fix example regex string to slice
Signed-off-by: windghoul <windghoul@gmail.com>

--- a/example/config-sample.yaml
+++ b/example/config-sample.yaml
@@ -47,13 +47,17 @@ spec:
     simpleLoadBalance:
       kind: "random"
   circuitBreaks:
-    - regex: "/[1-9][0-9]*/"
-    - regex: "/[1-2][0-9]*/"
+    - regex:
+      - "/[1-9][0-9]*/"
+    - regex:
+      - "/[1-2][0-9]*/"
   concurrencyControls:
-    - regex: "/[1-2][0-9]*/"
+    - regex:
+      - "/[1-2][0-9]*/"
       duration: 1
       maxConcurrency: 11
-    - regex: "/[1-7][0-9]*/"
+    - regex:
+      - "/[1-7][0-9]*/"
       duration: 1
       maxConcurrency: 20
 
