--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -24,7 +24,7 @@ backend_type = "mysql"
 # proxy 与后端数据库建连连接池大小，值范围：1 ~ 255, 默认值：64
 pool_size = 3
 # 服务端版本
-server_version = "5.7.37"
+server_version = ""
 
 # # 后端负载均衡配置
 # [proxy.config.simple_loadbalance]
@@ -43,18 +43,18 @@ default_target = "readwrite"
 type = "mha"
 user = "root"
 password = "12345678"
-monitor_period = 1000
-connect_period = 1000
+monitor_period = 10000
+connect_period = 100000
 connect_timeout = 60000
 connect_failure_threshold = 3
-ping_period = 1000
-ping_timeout = 3000
+ping_period = 100000
+ping_timeout = 30000
 ping_failure_threshold = 3
-replication_lag_period = 1000
-replication_lag_timeout = 60000
+replication_lag_period = 10000
+replication_lag_timeout = 6000
 replication_lag_failure_threshold = 3
 max_replication_lag = 3
-read_only_period = 1000
+read_only_period = 100
 read_only_timeout = 60000
 read_only_failure_threshold = 3
 
