--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -24,88 +24,49 @@ backend_type = "mysql"
 # proxy 与后端数据库建连连接池大小，值范围：1 ~ 255, 默认值：64
 pool_size = 3
 # 服务端版本
-server_version = ""
+server_version = "5.7.37"
 
-# # 后端负载均衡配置
-# [proxy.config.simple_loadbalance]
-# # 负载均衡算法：[random/roundrobin], 默认值: random 算法
-# balance_type = "random"
-# # 选择挂载后端节点
-# nodes = ["ds001"]
+# 后端负载均衡配置
+[proxy.config.simple_loadbalance]
+# 负载均衡算法：[random/roundrobin], 默认值: random 算法
+balance_type = "random"
+# 选择挂载后端节点
+nodes = ["ds001"]
 
-# 动态读写分离配置
 [proxy.config.read_write_splitting]
 
-[proxy.config.read_write_splitting.dynamic]
-default_target = "readwrite"
+[proxy.config.read_write_splitting.static]
+default_target = "read"
 
-[proxy.config.read_write_splitting.dynamic.discovery]
-type = "mha"
-user = "root"
-password = "12345678"
-monitor_period = 1
-connect_period = 1000
-connect_timeout = 600
-connect_failure_threshold = 1
-ping_period = 100
-ping_timeout = 30000
-ping_failure_threshold = 1
-replication_lag_period = 1000
-replication_lag_timeout = 60000
-replication_lag_failure_threshold = 1
-max_replication_lag = 3
-read_only_period = 1000
-read_only_timeout = 60000
-read_only_failure_threshold = 1
+[[proxy.config.read_write_splitting.static.rule]]
+name = "read-rule"
+type = "regex"
+regex = [".*"]
+target = "read"
+algorithm_name = "random"
 
-[[proxy.config.read_write_splitting.dynamic.rule]]
+[[proxy.config.read_write_splitting.static.rule]]
 name = "write-rule"
 type = "regex"
-regex = ["^insert"]
+regex = [".*"]
 target = "readwrite"
 algorithm_name = "roundrobin"
 
-[[proxy.config.read_write_splitting.dynamic.rule]]
-name = "read-rule"
-type = "regex"
-regex = ["^select"]
-target = "read"
-algorithm_name = "roundrobin"
+[[proxy.config.plugin.concurrency_control]]
+regex = ["aaa"]
+max_concurrency = 5
+duration = 333
 
-# [proxy.config.read_write_splitting]
+[[proxy.config.plugin.concurrency_control]]
+regex = ["bbb"]
+max_concurrency = 5
+duration = 333
 
-# [proxy.config.read_write_splitting.static]
-# default_target = "read"
+[[proxy.config.plugin.circuit_break]]
+regex = ["111"]
 
-# [[proxy.config.read_write_splitting.static.rule]]
-# name = "read-rule"
-# type = "regex"
-# regex = ["^select"]
-# target = "read"
-# algorithm_name = "random"
-
-# [[proxy.config.read_write_splitting.static.rule]]
-# name = "write-rule"
-# type = "regex"
-# regex = ["^insert"]
-# target = "readwrite"
-# algorithm_name = "roundrobin"
-
-# [[proxy.config.plugin.concurrency_control]]
-# regex = ["aaa"]
-# max_concurrency = 5
-# duration = 333
-
-# [[proxy.config.plugin.concurrency_control]]
-# regex = ["bbb"]
-# max_concurrency = 5
-# duration = 333
-
-# [[proxy.config.plugin.circuit_break]]
-# regex = ["111"]
-
-# [[proxy.config.plugin.circuit_break]]
-# regex = ["222"]
+[[proxy.config.plugin.circuit_break]]
+regex = ["222"]
 
 # 后端数据源配置
 [mysql]
@@ -121,24 +82,7 @@ password = "12345678"
 # 数据库地址
 host = "127.0.0.1"
 # 数据库端口
-port = 3306
-# 负载均衡节点权重
-weight = 1
-role = "read"
-
-[[mysql.node]]
-# 数据源 name
-name = "ds001"
-# database name
-db = "socksdb"
-# 数据库 user
-user = "root"
-# 数据库 password
-password = "12345678"
-# 数据库地址
-host = "127.0.0.1"
-# 数据库端口
 port = 3308
 # 负载均衡节点权重
 weight = 1
-role = "readwrite"
+role = "read"
