--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -4,8 +4,21 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+parking_lot = "0.12.0"
+tracing = "0.1.13"
+tracing-futures = { version = "0.2.3" }
+tracing-subscriber = "0.2.2"
 serde = { version = "1.0.133", default-features = false, features = ["derive"] }
 serde_derive = "1.0"
 regex = "1"
+crossbeam-channel = "0.3"
+futures = "0.3.5"
+async-trait = "0.1.56"
+chrono = "0.4"
+tokio = { version = "1.0.0", features = ["full", "tracing"] }
+tokio-scoped = "0.2.0"
 loadbalance = { path = "../loadbalance" }
 endpoint = { path = "../endpoint" }
+conn_pool = { path = "../../proxy/pool" }
+mysql_protocol = {path = "../../protocol/mysql", package = "mysql_protocol"}
+pisa_error = {path = "../../error", package = "error"}
