fix(license): fix check license failed for pisa-daemon Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -34,5 +34,7 @@ header:
     - 'pisa-proxy/rust-toolchain'
     - 'pisa-proxy/Cargo.lock'
     - '**/*.template'
+    - 'pisa-daemon/Cargo.lock'
+    - 'pisa-daemon/bpf/headers/*.h'
 
   comment: on-failure
