fix(crd): rename managed to master
Signed-off-by: mlycore <maxwell92@126.com>

--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -171,9 +171,9 @@ spec:
                             type: object
                             description: 'Discovery setup to detect role of MySQL instances'
                             properties:
-                              managedHighAvailability:
+                              masterHighAvailability:
                                 type: object
-                                description: 'Managed High Availability'
+                                description: 'Master High Availability'
                                 properties:
                                   user:
                                     type: string
