--- a/pisa-proxy/proxy/strategy/Cargo.toml
+++ b/pisa-proxy/proxy/strategy/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.133", default-features = false, features = ["derive"] }
 serde_derive = "1.0"
 tokio = { version = "1.0.0", features = ["full", "tracing"] }
 tokio-scoped = "0.2.0"
+lazy_static = "1.4.0"
 tracing = "0.1.13"
 tracing-futures = { version = "0.2.3" }
 tracing-subscriber = "0.3.9"
