--- a/pisa-proxy/audit/aws/Cargo.toml
+++ b/pisa-proxy/audit/aws/Cargo.toml
@@ -10,3 +10,6 @@ aws-config = "0.47.0"
 aws-sdk-cloudwatchlogs = { version = "0.17.0", default-features = false, features = ["rustls"]}
 chrono = "0.4.0"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1.13"
+tracing-futures = { version = "0.2.3" }
+tracing-subscriber = "0.3.9"
