--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
       - name: "Kaniko build"
         uses: mlycore/action-kaniko@master
         with:
+          registry: uhub.service.ucloud.cn
           image: pisanixio/controller
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -79,6 +80,7 @@ jobs:
       - name: "Kaniko build"
         uses: mlycore/action-kaniko@master
         with:
+          registry: uhub.service.ucloud.cn
           image: pisanixio/proxy
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
